# telegrand

./: Cargo.toml  README.md
.github/workflows/: ci.yml
data/resources/: resources.gresource.xml
src/session/: basic_group.rs  basic_group_list.rs  chat_list.rs  mod.rs  supergroup.rs  supergroup_list.rs  user.rs
src/session/chat/: history.rs  message.rs  message_forward_info.rs  mod.rs  sponsored_message.rs
src/session/components/: avatar.rs
src/session/content/: chat_info_dialog.rs  item_row.rs
src/session/content/message_row/: media.rs  media_content.rs  media_picture.rs  mod.rs  photo.rs
src/session/sidebar/: row.rs
