[package]
name = "telegrand"
version = "0.1.0"
authors = ["Marco Melorio <marco.melorio@protonmail.com>"]
edition = "2021"

[dependencies]
adw = { git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs", package = "libadwaita" }
anyhow = "1.0"
ashpd = { git = "https://github.com/melix99/ashpd", features = ["feature_gtk4"] }
futures = { version = "0.3", default-features = false }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gobject = { git = "https://github.com/jf2048/gobject" }
gtk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4", features = ["v4_6"] }
image = { version = "0.24", default-features = false, features = ["webp"] }
indexmap = "1.8"
locale_config = "0.3"
log = "0.4"
once_cell = "1.10"
pretty_env_logger = "0.4"
qrcode-generator = { version = "4.1", default-features = false }
regex = "1.5"
tdlib = { version = "0.1", default-features = false }
temp-dir = "0.1"
